{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 2,
  "lineage": "b16253ec-4e9b-a029-ef50-5dd2fc66f600",
  "resources": [
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http_anywhere",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:042236406240:security-group/sg-0f6c1e48c885754e7",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f6c1e48c885754e7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG-Quick-P001-allow_http_anywhere",
            "name_prefix": "",
            "owner_id": "042236406240",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-Quick-P001-testing--allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-b3e006d8"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_anywhere",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:042236406240:security-group/sg-0120177820e77c5e2",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0120177820e77c5e2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG-Quick-P001-allow_ssh_anywhere",
            "name_prefix": "",
            "owner_id": "042236406240",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-Quick-P001-testing--allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-b3e006d8"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}